force-app/main/default/objects/Quote_Document_Column__c/Quote_Document_Column__c.object-meta.xml
<CustomObject>
    <description>One column of a generated table: which field it binds, in what order, under what heading, formatted as what type. Before this object existed the column layout lived only in a Word template's Value Select tags, which is the single largest reason a second renderer was expensive - the layout had to be rebuilt by hand and could silently diverge. A renderer now reads columns rather than being configured with them.</description>
    <label>Quote Document Column</label>
    <nameField>
        <displayFormat>QDC-{0000000000}</displayFormat>
        <label>Column Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Document Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>