force-app/main/default/objects/Quote_Document_Column__c/fields/Column_Code__c.field-meta.xml
<CustomField>
    <fullName>Column_Code__c</fullName>
    <inlineHelpText>Semantic key for this column - COL_LIST, COL_NET, COL_NET_CHANGE, COL_LABEL. NEVER an English phrase: the printed heading is Display Label, which the dictionary resolves per locale. A renderer keys layout and styling off this code, so it must stay stable even when the heading is reworded or translated.</inlineHelpText>
    <label>Column Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>