force-app/main/default/objects/Quote_Document_Column__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <inlineHelpText>The printed column heading, already resolved for this table's locale. A renderer prints this verbatim and must never construct, translate, or abbreviate a heading of its own.</inlineHelpText>
    <label>Display Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>