force-app/main/default/objects/Quote_Document_Column__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <inlineHelpText>Left-to-right print order. Unique and ascending within a table, conventionally in tens so a column can be inserted later without renumbering. A renderer sorts by this and nothing else.</inlineHelpText>
    <label>Display Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>