force-app/main/default/objects/Quote_Document_Column__c/fields/Format_Role__c.field-meta.xml
<CustomField><fullName>Format_Role__c</fullName><description>Snapshot of the column's business presentation meaning.</description><label>Format Role</label><length>80</length><type>Text</type></CustomField>