force-app/main/default/objects/Quote_Document_Column__c/fields/Is_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Is_Displayed__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>FALSE means this column was generated but must not print. Kept rather than omitted so a renderer never has to ask why a column code it knows about is missing.</inlineHelpText>
    <label>Is Displayed</label>
    <type>Checkbox</type>
</CustomField>