force-app/main/default/objects/Quote_Document_Column__c/fields/Total_Rule__c.field-meta.xml
<CustomField><fullName>Total_Rule__c</fullName><description>Snapshot of how this column participates in totals.</description><label>Total Rule</label><length>40</length><type>Text</type></CustomField>