force-app/main/default/objects/Quote_Document_Column__c/fields/Value_Field__c.field-meta.xml
<CustomField>
    <fullName>Value_Field__c</fullName>
    <inlineHelpText>The Quote_Document_Row__c API name this column reads, e.g. Amount_Net__c. Any readable field on the row qualifies, including one a subscriber added in their own org - that is the cheapest flexibility lever in the design and an allowlist would close it. Blank means the column prints the row's own Display Label rather than a field.</inlineHelpText>
    <label>Value Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>